# stat-learning-data-pipeline

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
analysis/: anova_weak_topics.py  score_projection.py
analysis/notebooks/: exploratory.example.ipynb
backend/: .env.example  .gcloudignore  main.py  requirements.txt
backend/tests/: conftest.py  test_hashing.py  test_validation.py
data/seed/: topics.yaml
docs/: ARCHITECTURE.md  DATA_MODEL.md  DEPLOYMENT.md  KNOWN_LIMITATIONS.md  LOOKER_STUDIO.md  ROADMAP.md
docs/adr/: 0001-record-architecture-decisions.md  0002-bigquery-as-warehouse.md  0003-line-id-token-verification.md  0004-firebase-hosting-for-liff.md  0005-star-schema.md  0006-migration-from-fastapi-to-cloud-functions.md  README.md  _template.md
docs/archive/fastapi-experiment/: README.md
docs/archive/fastapi-experiment/backend/: main.py  requirements-dev.txt  requirements.txt
docs/archive/fastapi-experiment/backend/data/: quiz_data.csv
frontend/: app.js  index.html  style.css
infra/terraform/: README.md  main.tf  terraform.tfvars.example  variables.tf
scripts/: deploy.sh  regen_topic_seed.py  setup_scheduled_query.sh
sql/: 01_create_dataset.sql  02_tables.sql  03_seed_dim_topic.sql  03b_seed_dim_date.sql  04_etl_raw_to_mart.sql  05_analysis_views.sql
